# LinCore

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  README_CN.md  README_EN.md  imgui.ini
shaders/: brdf.glsl  colored_triangle_mesh.vert  cull.comp  gradient.comp  gradient_color.comp  input_structures.glsl  light.frag  light_test.frag  light_test.vert  math.glsl  mesh.frag  mesh.h  mesh.vert  mesh_indirect.vert  mesh_structures.glsl  mrt.frag  mrt.vert  sky.comp.spv  skybox.frag  skybox.vert  test.frag  test.vert  tex_image.frag
shaders/compute/: gradient_color.comp  sky.comp
shaders/core/: brdf.glsl  global.glsl  light_structures.glsl  lighting.glsl  math.glsl  mesh_structures.glsl
shaders/deferred/: light.frag  mrt.frag  mrt.vert
shaders/forward/: mesh.frag  mesh.vert
shaders/post/: blur.frag  ssao.frag
src/: CMakeLists.txt  asynchronous_loader.cpp  asynchronous_loader.h  camera.cpp  camera.h  command_buffer.cpp  command_buffer.h  config.h  cvars.cpp  cvars.h  frame_graph.cpp  frame_graph.h  frustum_cull.h  gpu_enums.h  logging.h  main.cpp  pool_structure.h  render_pass.cpp  render_pass.h  resources.cpp  resources.h  scene_graph.cpp  scene_graph.h  string_utils.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_engine.cpp  vk_engine.h  vk_images.cpp  vk_images.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_profiler.cpp  vk_profiler.h  (+12 more)
src/foundation/: application.cpp  application.h  config.h  cvars.h  data_structure.h  gpu_enums.h  layer.cpp  layer.h  math_utils.cpp  math_utils.h  resources.cpp  resources.h  string_utils.h  timestep.h  window.cpp  window.h
src/foundation/events/: event.cpp  event.h  key_event.h  mouse_event.h  window_event.h
src/fundation/: cvars.cpp  cvars.h  pool_structure.h  resources.cpp  resources.h  string_utils.h
src/graphics/: camera.cpp  camera.h  frame_graph.h  imgui_layer.cpp  imgui_layer.h  vk_command_buffer.cpp  vk_command_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_loader.cpp  vk_loader.h  vk_pipelines.cpp  vk_pipelines.h  vk_profiler.cpp  vk_profiler.h  vk_resources.cpp  vk_resources.h  vk_shaders.cpp  vk_shaders.h  vk_types.h
src/graphics/backend/: camera.h  imgui_layer.cpp  imgui_layer.h  vk_command_buffer.h  vk_descriptors.cpp  vk_descriptors.h  vk_device.cpp  vk_device.h  vk_initializers.cpp  vk_initializers.h  vk_pipelines.cpp  vk_pipelines.h  vk_profiler.cpp  vk_profiler.h  vk_resources.cpp  vk_resources.h  vk_shaders.cpp  vk_shaders.h  vk_types.h
src/graphics/render_pass/: render_pass.cpp  render_pass.h
src/graphics/render_pass/passes/: blur_pass.cpp  blur_pass.h  culling_pass.cpp  culling_pass.h  gbuffer_pass.cpp  gbuffer_pass.h  light_pass.cpp  light_pass.h  mesh_pass.cpp  mesh_pass.h  sky_box_pass.cpp  sky_box_pass.h  sky_pass.cpp  sky_pass.h  ssao_pass.cpp  ssao_pass.h
src/graphics/renderer/: renderer_base.h
src/graphics/renderer/passes/: culling_pass.cpp  culling_pass.h  mesh_pass.cpp  mesh_pass.h  render_pass.cpp  sky_pass.cpp  sky_pass.h
src/graphics/scene/: gltf_loader.cpp  gltf_loader.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  scene_types.cpp  scene_types.h  scene_view.h
src/graphics/scene_graph/: gltf_loader.cpp  gltf_loader.h  light_system.cpp  light_system.h  scene_graph.cpp  scene_graph.h  scene_node.h  scene_types.cpp  scene_types.h  scene_view.cpp  scene_view.h
src/legacy/: vk_shaders.cpp
